@@ -1,6 +1,7 @@
 2012-05-21 Marco Bodrato <bodrato@mail.dm.unipi.it>
 
 	* mpn/generic/toom8_sqr.c: Reduce branches for recursion.
+	* mpn/generic/toom8h_mul.c: Likewise.
 
 2012-05-20  Torbjorn Granlund  <tege@gmplib.org>
 
